--- a/+not-found.html
+++ b/+not-found.html
@@ -244,6 +244,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1loqt21{cursor:pointer;}
 .r-1m04atk{padding-left:8px;}
 .r-1mlwlqe{flex-basis:auto;}
+.r-1mnahxq{margin-top:0px;}
 .r-1mrlafo{background-position:0;}
 .r-1muvv40{animation-iteration-count:infinite;}
 .r-1n5th1i{background-color:rgba(42,42,26,1.00);}
@@ -479,5 +480,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-6e13fa6e5a16dc500ce8d88175032c4e.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-53594fd1a23a577c4d26282b86c8a0c7.js" defer></script>
 </body></html>
