--- a/+not-found.html
+++ b/+not-found.html
@@ -62,6 +62,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-nsbfu8{padding:16px;}
 .r-qrip3q{border-bottom-color:rgba(74,74,110,1.00);border-left-color:rgba(74,74,110,1.00);border-right-color:rgba(74,74,110,1.00);border-top-color:rgba(74,74,110,1.00);}
 .r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
+.r-t23y2h{border-bottom-left-radius:14px;border-bottom-right-radius:14px;border-top-left-radius:14px;border-top-right-radius:14px;}
 .r-t60dpp{padding:0px;}
 .r-tuq35u{padding:4px;}
 .r-v8wr0j{border-bottom-color:rgba(74,222,128,1.00);border-left-color:rgba(74,222,128,1.00);border-right-color:rgba(74,222,128,1.00);border-top-color:rgba(74,222,128,1.00);}
@@ -72,6 +73,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-ywje51{margin:auto;}
 .r-z2wwpe{border-bottom-left-radius:4px;border-bottom-right-radius:4px;border-top-left-radius:4px;border-top-right-radius:4px;}
 .r-z7fis4{border-bottom-color:rgba(42,42,78,1.00);border-left-color:rgba(42,42,78,1.00);border-right-color:rgba(42,42,78,1.00);border-top-color:rgba(42,42,78,1.00);}
+.r-zhp00w{padding:2px;}
 [stylesheet-group="2.1"]{}
 .r-11f147o{padding-bottom:8px;padding-top:8px;}
 .r-11gswi8{padding-left:3px;padding-right:3px;}
@@ -304,6 +306,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1yef0xd{animation-name:r-11cv4x;}
 .r-1ygmrgt{padding-top:24px;}
 .r-1yis5wz{color:rgba(204,204,204,1.00);}
+.r-21z42r{transform:translateX(22px);}
 .r-2eszeu::-webkit-scrollbar{display:none}
 .r-2eszeu{scrollbar-width:none;}
 .r-30o5oe{-moz-appearance:none;-ms-appearance:none;-webkit-appearance:none;appearance:none;}
@@ -396,6 +399,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-j3520h{background-color:rgba(26,61,45,1.00);}
 .r-jwli3a{color:rgba(255,255,255,1.00);}
 .r-k200y{align-self:flex-start;}
+.r-kbq90q{box-shadow:0px 2px 2px rgba(0,0,0,0.20);}
 .r-kc8jnq{margin-top:6px;}
 .r-kemksi{background-color:rgba(0,0,0,1.00);}
 .r-kizejy{color:rgba(155,161,166,1.00);}
@@ -435,6 +439,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-tl32pe{background-color:rgba(58,90,138,1.00);}
 .r-tskmnb{padding-top:8px;}
 .r-tsynxw{text-transform:uppercase;}
+.r-ttb5dx{width:50px;}
 .r-ttdzmv{padding-top:12px;}
 .r-u04jod{background-color:rgba(61,45,45,1.00);}
 .r-u6sd8q{background-repeat:no-repeat;}
@@ -479,5 +484,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-b084467389e6a5439c119afc6a35a892.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-ad266b3e34dd2908fb6b4d69cb9f217b.js" defer></script>
 </body></html>
