--- a/+not-found.html
+++ b/+not-found.html
@@ -323,6 +323,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-5kkj8d{border-top-width:1px;}
 .r-5oul0u{margin-bottom:8px;}
 .r-60vfwk{min-width:1px;}
+.r-61z16t{margin-right:0px;}
 .r-633pao>* {pointer-events:none;}
 .r-633pao{pointer-events:none!important;}
 .r-6dt33c{opacity:1;}
@@ -339,7 +340,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-7q8q6z{cursor:default;}
 .r-7r4507{height:150px;}
 .r-7zukgi{background-color:rgba(26,42,42,1.00);}
-.r-87bcf5{font-size:80px;}
 .r-8akbws{-webkit-box-orient:vertical;}
 .r-8ay8q1{letter-spacing:0.1px;}
 .r-8b15pl{border-left-color:rgba(74,222,128,1.00);}
@@ -484,5 +484,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-ad266b3e34dd2908fb6b4d69cb9f217b.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-9260fe331219e5b7c221c80237924ffe.js" defer></script>
 </body></html>
