--- a/+not-found.html
+++ b/+not-found.html
@@ -308,6 +308,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1yef0xd{animation-name:r-11cv4x;}
 .r-1ygmrgt{padding-top:24px;}
 .r-1yis5wz{color:rgba(204,204,204,1.00);}
+.r-1yvhtrz{width:32px;}
 .r-21z42r{transform:translateX(22px);}
 .r-2eszeu::-webkit-scrollbar{display:none}
 .r-2eszeu{scrollbar-width:none;}
@@ -353,6 +354,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-9f3iom{color:rgba(160,208,176,1.00);}
 .r-a023e6{font-size:15px;}
 .r-a2tzq0{justify-content:space-around;}
+.r-a4n0a9{color:rgba(255,215,0,1.00);}
 .r-adyw6z{font-size:20px;}
 .r-agouwx{transform:translateZ(0);}
 .r-ah5dr5>* {pointer-events:none;}
@@ -362,6 +364,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-b8lwoo{width:100px;}
 .r-bi4vy9{transform:translateY(100%);}
 .r-bt1l66{min-height:20px;}
+.r-bt306{border-top-color:rgba(26,42,58,1.00);}
 .r-buy8e9{overflow-y:hidden;}
 .r-bv2aro{padding-left:env(safe-area-inset-left);}
 .r-c1zdzb{background-color:rgba(74,222,128,1.00);}
@@ -420,6 +423,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-n6v787{font-size:13px;}
 .r-o4n3w5{width:23px;}
 .r-o52ifk{height:100px;}
+.r-o7fla6{background-color:rgba(15,26,42,1.00);}
 .r-ojf8lh{gap:6px;}
 .r-orgf3d{opacity:0;}
 .r-peo1c{min-height:44px;}
@@ -491,5 +495,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts">@font-face{font-family:"Ionicons";src:url("/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf");font-display:auto}
 @font-face{font-family:"MaterialCommunityIcons";src:url("/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf");font-display:auto}
 @font-face{font-family:"AntDesign";src:url("/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf");font-display:auto}
-@font-face{font-family:"MaterialIcons";src:url("/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf");font-display:auto}</style><link rel="preload" href="/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-8c5b3598a8b0ce4b5479fada2c86b298.js" defer></script>
+@font-face{font-family:"MaterialIcons";src:url("/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf");font-display:auto}</style><link rel="preload" href="/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-d363b0268e7b6b67f5c68c5938041098.js" defer></script>
 </body></html>
