--- a/_sitemap.html
+++ b/_sitemap.html
@@ -56,6 +56,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-d045u9{border-bottom-width:2px;border-left-width:2px;border-right-width:2px;border-top-width:2px;}
 .r-d23pfw{padding:24px;}
 .r-edyy15{padding:8px;}
+.r-eew0gc{border-bottom-color:rgba(64,64,80,1.00);border-left-color:rgba(64,64,80,1.00);border-right-color:rgba(64,64,80,1.00);border-top-color:rgba(64,64,80,1.00);}
 .r-eg6o18{border-bottom-style:dashed;border-left-style:dashed;border-right-style:dashed;border-top-style:dashed;}
 .r-f6hrsh{border-bottom-color:rgba(42,74,110,1.00);border-left-color:rgba(42,74,110,1.00);border-right-color:rgba(42,74,110,1.00);border-top-color:rgba(42,74,110,1.00);}
 .r-fx7oqy{border-bottom-color:rgba(0,0,255,1.00);border-left-color:rgba(0,0,255,1.00);border-right-color:rgba(0,0,255,1.00);border-top-color:rgba(0,0,255,1.00);}
@@ -220,6 +221,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1ff274t{text-align:right;}
 .r-1ffj0ar{background-color:rgba(0,0,0,0.40);}
 .r-1g80hic{opacity:0.8;}
+.r-1g9frx2{background-color:rgba(255,107,107,0.10);}
 .r-1ge9hsw{max-width:960px;}
 .r-1gh1dx5{color:rgba(255,107,107,1.00);}
 .r-1ghxqbu{font-variant:tabular-nums;}
@@ -350,6 +352,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-8ay8q1{letter-spacing:0.1px;}
 .r-8b15pl{border-left-color:rgba(74,222,128,1.00);}
 .r-8d26hk{margin-bottom:40px;}
+.r-8pekpu{color:rgba(176,176,192,1.00);}
 .r-95jzfe{padding-top:16px;}
 .r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
 .r-9aw3ui{gap:4px;}
@@ -363,6 +366,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-ah5dr5>* {pointer-events:none;}
 .r-ah5dr5{pointer-events:auto!important;}
 .r-aruset{font-weight:200;}
+.r-b6idm3{background-color:rgba(0,0,0,0.85);}
 .r-b88u0q{font-weight:700;}
 .r-b8lwoo{width:100px;}
 .r-bi4vy9{transform:translateY(100%);}
@@ -451,7 +455,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-tskmnb{padding-top:8px;}
 .r-tsynxw{text-transform:uppercase;}
 .r-ttb5dx{width:50px;}
-.r-ttdzmv{padding-top:12px;}
 .r-u04jod{background-color:rgba(61,45,45,1.00);}
 .r-u6sd8q{background-repeat:no-repeat;}
 .r-u8s1d{position:absolute;}
@@ -499,5 +502,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts">@font-face{font-family:"Ionicons";src:url("/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf");font-display:auto}
 @font-face{font-family:"MaterialCommunityIcons";src:url("/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf");font-display:auto}
 @font-face{font-family:"AntDesign";src:url("/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf");font-display:auto}
-@font-face{font-family:"MaterialIcons";src:url("/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf");font-display:auto}</style><link rel="preload" href="/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-5fcaa7d6f395ec1a71d2a4bfc51fde37.js" defer></script>
+@font-face{font-family:"MaterialIcons";src:url("/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf");font-display:auto}</style><link rel="preload" href="/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-9b21e945e1bff4981dcef05beb21c880.js" defer></script>
 </body></html>
