--- a/root-index.html
+++ b/root-index.html
@@ -18,16 +18,16 @@
             text-align: center;
         }
         a {
-            color: #4ade80;
+            color: #A855F7;
             text-decoration: none;
             font-size: 1.2rem;
             padding: 16px 32px;
-            border: 2px solid #4ade80;
+            border: 2px solid #A855F7;
             border-radius: 8px;
             transition: all 0.2s;
         }
         a:hover {
-            background-color: #4ade80;
+            background-color: #A855F7;
             color: #0f0f1a;
         }
     </style>
