Update favicon and apple-touch-icon in index.html
Replaces the default favicon with a custom logo and adds an apple-touch-icon for better branding on Apple devices.

--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,9 @@
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Expo favicons -->
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/assets/images/intersections-logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/intersections-logo.png" />
 
     <style>
       body {
