Update web paths from /intersections/ to root
Changed URL and link references from '/intersections/' to '/' in authentication callback and root index HTML. Updated comments and logic in fix-web-assets.js to reflect removal of the '/intersections/' prefix, ensuring consistency in web asset paths.

--- a/root-index.html
+++ b/root-index.html
@@ -36,7 +36,7 @@
     <div>
         <h1>Welcome</h1>
         <p style="margin-bottom: 2rem; color: #888;">Play my daily word puzzle game</p>
-        <a href="/intersections/">Play Intersections</a>
+        <a href="/">Play Intersections</a>
     </div>
 </body>
 </html>
