--- a/web/index.html
+++ b/web/index.html
@@ -27,5 +27,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <footer style="position: absolute; bottom: 0; width: 100%; text-align: center; padding: 10px; font-size: 12px; background-color: rgba(10,22,40,0.8);">
+      <a href="/privacy.html" style="color: #a855f7; text-decoration: none; margin: 0 10px;">Privacy Policy</a>
+      <a href="/terms.html" style="color: #a855f7; text-decoration: none; margin: 0 10px;">Terms of Service</a>
+    </footer>
   </body>
 </html>
