Add Google AdSense script to index.html
Included the async AdSense script for site verification and H5 games by adding the relevant script tag to the HTML head.

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,10 @@
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+    <!-- AdSense Verification and H5 Games -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6475460515852013"
+     crossorigin="anonymous"></script>
+
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/assets/images/intersections-logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/intersections-logo.png" />
