Integrate H5 Games Ads for rewarded ads on web
Added H5 Games Ads support to the web implementation of rewarded ads, enabling extra lives via adBreak. Updated index.html to improve AdSense integration and ad frequency hint. The hook now checks for adBreak and grants rewards accordingly.

--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,12 @@
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- AdSense Verification and H5 Games -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6475460515852013"
-     crossorigin="anonymous"></script>
+    <!-- AdSense Verification and H5 Games Ads -->
+    <script async
+      data-ad-client="ca-pub-6475460515852013"
+      data-ad-frequency-hint="30s"
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+    </script>
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/assets/images/intersections-logo.png" />
