Add adBreak initialization script for H5 Games
Introduced a script to initialize adBreak and adConfig functions, enabling ad integration for H5 Games using Google AdSense.

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,14 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
     </script>
 
+    <!-- Initialize adBreak for H5 Games -->
+    <script>
+      window.adsbygoogle = window.adsbygoogle || [];
+      window.adBreak = window.adConfig = function(o) {
+        adsbygoogle.push(o);
+      };
+    </script>
+
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/assets/images/intersections-logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/intersections-logo.png" />
